prevent RTE fields from collapsing

--- a/client/editable/editable.import.less
+++ b/client/editable/editable.import.less
@@ -4,6 +4,7 @@
 
 
 	.editable {
+		min-height: 2em;
 		padding: 8px;
 	}
 
